2003-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c (RGBTransformImage): Fixed bug (thanks to
	Bill for finding it) and finished optimizing XYZ table
	creation.
	(AverageImages): Optimized loops.
	(ChannelImage): Optimized loops.  3X speed-up for SPARC.

	* magick/enhance.c: Optimized NegateImage().

2003-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* Set some common API structures to 0xbf prior to deallocation
	to make accidental continued use more obvious.

2003-01-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/constitute.c: Minor optimizations to PopImagePixels()
	* coders/dpx.c: Reading the DPX header was off by 4 bytes.
	* coders/(art.c,avs.c,bmp.c,cmyk.c,dcm.c,dib.c,dpx.c,fax.c,
	fits.c,gray.c,icon.c,map.c,miff.c,mono.c,mpc.c,mtv.c,otb.c,
	pcx.c,pdb.c,pict.c,pix.c,pnm.c,pwp.c,rgb.c,rla.c,rle.c,sct.c,
	sgi.c,sun.c,tga.c,tim.c,uyvy.c,vicar.c,viff.c,wbmp.c,xwd.c,
	yuv.c): Ensure that blob is closed on unexpected EOF.
	* magick/image.c: Optimized SetImageOpacity().
	Optimized SetImage() for intializing non-opaque images.  The
	opacity channel was being intialized twice.

2003-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/constitute.c: Log entry and exit from coders so that
	coders don't need to.
	* Finished re-writing PushImagePixels() using coding practices
	which may result in faster code.
	* PerlMagick is changed from Image::Magick to Graphics::Magick
	in order to avoid conflicts with the ImageMagick version.  This
	means that any Perl scripts based on the ImageMagick version need
	to do a global replace of Image::Magick to Graphics::Magick.
	* PerlMagick/reference/filter/Raise.miff: Replaced with new version.

2003-01-08 William Radcliffe <billr@corbis.com>
	* magick/nt_feature.c
	Make ImageToHBITMAP function in nt_feature.c compile under Visual
	C++ again.

2003-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* coders/delegates.mgk.in: Fix cgm entry.  How did it become so